--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -1,8 +1,8 @@
 ﻿@using System.Globalization
-@using App.Data
-@using App.Data.Resources
-@inject Microsoft.Extensions.Localization.IStringLocalizer<Navigation> Nav
-@using App.Domain.Enum
+@inject Microsoft.Extensions.Localization.IStringLocalizerFactory Factory
+@{
+    var navigation = Factory.Create("Navigation.Navigation", "App.Data");
+}
 <!DOCTYPE html>
 <html lang="@CultureInfo.CurrentUICulture.Name">
 <head>
@@ -19,23 +19,18 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom box-shadow">
         <div class="container-fluid">
-            <a class="navbar-brand" asp-controller="Home" asp-action="Index">WebApp</a>
+            <a class="navbar-brand" asp-controller="Home" asp-action="Index">Localization App</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="topNav">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Index">@Nav["Navigation_Sidebar_Home_Text"]</a></li>
-                    <li class="nav-item"><a class="nav-link" asp-controller="Catalog" asp-action="Index">Products</a></li>
-                    <li class="nav-item"><a class="nav-link" asp-controller="Pages" asp-action="About">About us</a></li>
-                    <li class="nav-item"><a class="nav-link" asp-controller="Pages" asp-action="Contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Index">@navigation["Navigation_Home_Text"]</a></li>
+                    <li class="nav-item"><a class="nav-link">@navigation["Navigation_Product_Text"]</a></li>
+                    <li class="nav-item"><a class="nav-link">@navigation["Navigation_About_Us_Text"]</a></li>
+                    <li class="nav-item"><a class="nav-link">@navigation["Navigation_Contact_Text"]</a></li>
                 </ul>
-
-                <form class="d-flex me-3" method="get" asp-controller="Catalog" asp-action="Search">
-                    <input class="form-control me-2" type="search" name="q" placeholder="Search…" />
-                    <button class="btn btn-outline-primary" type="submit">Search</button>
-                </form>
                 
                 <partial name="_LanguageSelection" />
                 <partial name="_LoginPartial" />
