--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
 
             <div class="collapse navbar-collapse" id="topNav">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Index">@navigation["Navigation_Home_Text"]</a></li>
-                    <li class="nav-item"><a class="nav-link">@navigation["Navigation_Product_Text"]</a></li>
-                    <li class="nav-item"><a class="nav-link">@navigation["Navigation_About_Us_Text"]</a></li>
-                    <li class="nav-item"><a class="nav-link">@navigation["Navigation_Contact_Text"]</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Index">@navigation["Navigation_Home"]</a></li>
+                    <li class="nav-item"><a class="nav-link">@navigation["Navigation_Product"]</a></li>
+                    <li class="nav-item"><a class="nav-link">@navigation["Navigation_About_Us"]</a></li>
+                    <li class="nav-item"><a class="nav-link">@navigation["Navigation_Contact"]</a></li>
                 </ul>
                 
                 <partial name="_LanguageSelection" />
