UI translation fix

--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Home Page";
-    var resources = Factory.Create("Resources.Resources", "App.Data");
+    var resources = Factory.Create("Resources", "App.Data");
 }
 
 <div class="container mt-4">
