--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Globalization
 @inject Microsoft.Extensions.Localization.IStringLocalizerFactory Factory
 @{
-    var navigation = Factory.Create("Navigation.Navigation", "App.Data");
+    var resources = Factory.Create("Resources", "App.Data");
 }
 <!DOCTYPE html>
 <html lang="@CultureInfo.CurrentUICulture.Name">
@@ -26,10 +26,10 @@
 
             <div class="collapse navbar-collapse" id="topNav">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Index">@navigation["Navigation_Home"]</a></li>
-                    <li class="nav-item"><a class="nav-link">@navigation["Navigation_Product"]</a></li>
-                    <li class="nav-item"><a class="nav-link">@navigation["Navigation_About_Us"]</a></li>
-                    <li class="nav-item"><a class="nav-link">@navigation["Navigation_Contact"]</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Index">@resources["Navigation_Home"]</a></li>
+                    <li class="nav-item"><a class="nav-link">@resources["Navigation_Product"]</a></li>
+                    <li class="nav-item"><a class="nav-link">@resources["Navigation_About_Us"]</a></li>
+                    <li class="nav-item"><a class="nav-link">@resources["Navigation_Contact"]</a></li>
                 </ul>
                 
                 <partial name="_LanguageSelection" />
