user language selection

--- a/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/WebApp/Views/Shared/_Sidebar.cshtml
@@ -68,7 +68,7 @@
     {
         <div class="text-uppercase text-secondary small mb-2">Translator</div>
         <ul class="nav nav-pills flex-column mb-3">
-            <li><a class="nav-link text-white" asp-controller="Localization" asp-action="Index"><i class="bi bi-translate me-2"></i> Translate UI</a></li>
+            <li><a class="nav-link text-white" asp-controller="Translator" asp-action="MyLanguages"><i class="bi bi-translate me-2"></i> Language Selection</a></li>
         </ul>
     }
 </div>
