Add services to bll and small refactoring

--- a/WebApp/Views/Translator/MyLanguages.cshtml
+++ b/WebApp/Views/Translator/MyLanguages.cshtml
@@ -36,9 +36,8 @@
 else
 {
     <div class="d-flex justify-content-between align-items-center mb-2">
-        <div class="text-muted">Languages you know</div>
         <a asp-controller="Translator" asp-action="Languages" class="btn btn-outline-primary btn-sm">
-            Edit selection
+            Edit
         </a>
     </div>
 
