--- a/WebApp/Views/Translator/LanguagesSelection.cshtml
+++ b/WebApp/Views/Translator/LanguagesSelection.cshtml
@@ -6,14 +6,17 @@
 <h2 class="mb-3">@ViewData["Title"]</h2>
 
 <form asp-action="Languages" method="post">
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
+    <div class="row g-2">
         @for (var i = 0; i < Model.Languages.Count; i++)
         {
-            <div class="col">
-                <div class="form-check border rounded p-2">
+            <div class="col-12 col-md-6">
+                <div class="lang-item d-flex align-items-center border rounded p-2">
                     <input type="hidden" asp-for="Languages[i].Id" />
-                    <input class="form-check-input" type="checkbox" asp-for="Languages[i].Selected" id="lang_@i" />
-                    <label class="form-check-label" for="lang_@i">
+                    <input class="form-check-input position-static me-3 flex-shrink-0"
+                           type="checkbox"
+                           asp-for="Languages[i].Selected"
+                           id="lang_@i" />
+                    <label class="mb-0 flex-grow-1" for="lang_@i">
                         @Model.Languages[i].Display
                     </label>
                 </div>
