--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -1,8 +1,6 @@
 ﻿@using System.Globalization
-@inject Microsoft.Extensions.Localization.IStringLocalizerFactory Factory
-@{
-    var resources = Factory.Create("Resources", "App.Data");
-}
+@model WebApp.Models.DynamicTranslations.IndexVm
+
 <!DOCTYPE html>
 <html lang="@CultureInfo.CurrentUICulture.Name">
 <head>
@@ -26,10 +24,10 @@
 
             <div class="collapse navbar-collapse" id="topNav">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Index">@resources["Navigation_Home"]</a></li>
-                    <li class="nav-item"><a class="nav-link">@resources["Navigation_Product"]</a></li>
-                    <li class="nav-item"><a class="nav-link">@resources["Navigation_About_Us"]</a></li>
-                    <li class="nav-item"><a class="nav-link">@resources["Navigation_Contact"]</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Index">@Model.Value("Navigation_Home")</a></li>
+                    <li class="nav-item"><a class="nav-link">@Model.Value("Navigation_Product")</a></li>
+                    <li class="nav-item"><a class="nav-link">@Model.Value("Navigation_About_Us")</a></li>
+                    <li class="nav-item"><a class="nav-link">@Model.Value("Navigation_Contact")</a></li>
                 </ul>
                 
                 <partial name="_LanguageSelection" />
