--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
 ﻿@using System.Globalization
-@model WebApp.Models.DynamicTranslations.IndexVm
 
 <!DOCTYPE html>
 <html lang="@CultureInfo.CurrentUICulture.Name">
@@ -24,10 +23,10 @@
 
             <div class="collapse navbar-collapse" id="topNav">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Index">@Model.Value("Navigation_Home")</a></li>
-                    <li class="nav-item"><a class="nav-link">@Model.Value("Navigation_Product")</a></li>
-                    <li class="nav-item"><a class="nav-link">@Model.Value("Navigation_About_Us")</a></li>
-                    <li class="nav-item"><a class="nav-link">@Model.Value("Navigation_Contact")</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Index">@Translation["Navigation_Home"]</a></li>
+                    <li class="nav-item"><a class="nav-link">@Translation["Navigation_Product"]</a></li>
+                    <li class="nav-item"><a class="nav-link">@Translation["Navigation_About_Us"]</a></li>
+                    <li class="nav-item"><a class="nav-link">@Translation["Navigation_Contact"]</a></li>
                 </ul>
                 
                 <partial name="_LanguageSelection" />
