--- a/WebApp/Views/_ViewImports.cshtml
+++ b/WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using WebApp
+@using WebApp.Helpers
 @using WebApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@* Automaitcaly imports to all razor pages *@
+@inject IUITranslationsProvider Translation 
