--- a/WebApp/Views/TranslatorTranslation/LanguagesSelection.cshtml
+++ b/WebApp/Views/TranslatorTranslation/LanguagesSelection.cshtml
@@ -1,4 +1,4 @@
-@model WebApp.Models.TranslatorLanguagesVm
+@model WebApp.Models.Translator.Languages.TranslatorLanguagesSelectionVm
 @{
     ViewData["Title"] = "Languages I know";
 }
