--- a/WebApp/Views/TranslatorTranslation/MyLanguages.cshtml
+++ b/WebApp/Views/TranslatorTranslation/MyLanguages.cshtml
@@ -1,4 +1,4 @@
-@model WebApp.Models.MyLanguagesVm
+@model WebApp.Models.Translator.Languages.TranslatorMyLanguagesVm
 @{
     ViewData["Title"] = "My languages";
 }
